refactored to comply with hex arch, extended makefile
